# rocket-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
kubernetes/: kustomization.yaml  patch.yaml
kubernetes/postgres/: deployment.yaml
kubernetes/rocket-demo/: deployment.yaml  service.yaml
src/: main.rs  post.rs
