[package]
name = "rocket-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
postgres = { version = "0.19.1", features = ["with-chrono-0_4"] }
diesel_migrations = "1.4.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]